@@ -24,20 +24,6 @@ namespace DAnCE
     {
       return !this->event_queue_.is_empty ();
     }
-
-  ACE_INLINE
-  void Deployment_Scheduler::perform_work (void)
-    {
-      auto_ptr < ACE_Method_Request > de (this->event_queue_.dequeue ());
-
-      if (de.get ())
-        {
-          DANCE_DEBUG (10, (LM_TRACE, DLINFO
-                            ACE_TEXT ("Deployment_Scheduler::perform_work - ")
-                            ACE_TEXT ("Invoking a deployment event\n")));
-          de->call ();
-        }
-    }
 }
 
 #endif
