@@ -1,3 +1,9 @@
+Wed Jun 23 11:28:53 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * DAnCE/LocalityManager/Scheduler/Deployment_Scheduler.inl:
+        * DAnCE/LocalityManager/Scheduler/Deployment_Scheduler.cpp:
+          Moved method to non inline 
+
 Wed Jun 23 11:09:38 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ciao/Deployment/Handlers/Component_Handler.cpp:
